--- a/templates/index.html
+++ b/templates/index.html
@@ -25,25 +25,12 @@
     </head>
     <body>
         <p><b>AJAX Example:</b></p>
-           <form class="form-inline">
-           <!--First Name-->
-           <div class="form-group">
-               <label class="sr-only" for="num1">First number</label>
-               <input type="text" class="form-control" id="num1" placeholder="">
-           </div>
-           <!--Last Name-->
-           <div class="form-group">
-               <label class="sr-only" for="num2">Second Name</label>
-               <input type="text" class="form-control" id="num2" placeholder="">
-           </div>
-
-           <!--Submit Button-->
-               <button type="submit" class="btn btn-default">Submit</button>
+           <form name="form1" action="" onsubmit="return ajax_call()">
+                <input type="text" name="num1" id="num1"></input> *
+                <input type="text" name="num2" id="num2"></input>
+                <button type="submit" class="btn btn-default">submit</button>
            </form>
-
-           </br>
-               <div id="output"></div>
-           </br>
+           <div id="output"></div>
     </body>
 </html>
 
