get feedback as string and add doctype

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
                     })
                     .done(function(data) {
                         $('#output').text(data.output).show();
+                        //alert(data.output);
                     });
                     event.preventDefault();
                 });
