--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,10 @@
                         url : '/process'
                     })
                     .done(function(data) {
-                        $('#output').text(data.output).show();
+                        //$('#output').text(data.output).show();
                         //alert(data.output);
+                        $('#picture').html('<img src="/static/result.png" alt="result" />').show();
+
                     });
                     event.preventDefault();
                 });
@@ -33,6 +35,7 @@
                 <button type="submit" class="btn btn-default">submit</button>
            </form>
            <div id="output"></div>
+           <div id="picture"></div>
     </body>
 </html>
 
