delete redundant codes

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <p><b>AJAX Example:</b></p>
-           <form name="form1" action="" onsubmit="return ajax_call()">
+           <form>
                 <input type="text" name="num1" id="num1"></input> *
                 <input type="text" name="num2" id="num2"></input>
                 <button type="submit" class="btn btn-default">submit</button>
